# schedule-ai

./: .dockerignore  .env.example  .gitignore  README.md  agent.py  api_server.py  docker-compose.yml  langchain_agent.py  main.py  mcp_client.py  mcp_server.py  pyproject.toml  requirements.txt  rmp.py
conductor/: elective_ui_plan.md  plan.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/elective_selection_20260315/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/ui_overhaul_20260315/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/view_persistence_20260315/: index.md  metadata.json  plan.md  spec.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/components/: CourseDetailModal.tsx  CourseInput.tsx  CourseTree.tsx  DashboardLayout.tsx  ElectiveList.tsx  GeTracker.tsx  MajorDropdown.tsx  ScheduleForm.tsx  Sidebar.tsx  TimeSelector.tsx  TranscriptUploader.tsx
frontend/src/components/__tests__/: CourseDetailModal.test.tsx  CourseTree.test.tsx  DashboardLayout.test.tsx  ElectiveList.test.tsx  GeTracker.test.tsx  MajorDropdown.test.tsx  Sidebar.test.tsx  TranscriptUploader.test.tsx
frontend/src/components/ui/: GlassButton.tsx  GlassPanel.tsx  Modal.tsx  Skeleton.tsx
frontend/src/components/ui/__tests__/: GlassButton.test.tsx  GlassPanel.test.tsx
frontend/src/context/: PlannerContext.tsx
frontend/src/context/__tests__/: PlannerContext.test.tsx  PlannerContextCache.test.tsx
frontend/src/types/: cytoscape-dagre.d.ts
server/: Dockerfile  agent.py  course_tree.py  main.py  modules.py  tools.py
server/tests/: test_api.py
sjsu-data-retrival/: DATABASE.md  acalog_core_output.txt  ap_loader.py  build_db.py  build_trees.py  coid_scraper.py  coids.txt  course_detail_scraper.py  current_course_loader.py  db.py  ge_loader.py  major_exceptions_loader.py  major_loader.py  program_requirements_scraper.py  sjsu_scraper.py  test_coid_scraper.py  test_course_detail_scraper.py  test_course_tree.py  test_program_requirements_scraper.py
sjsu-data-retrival/scrapers/: ap_scrapper.py  course_scraper.py  exception_scrapper.py  ge_scraper.py  major_scrapper.py
sjsu-scraper/: ap_loader.py  description.py  ge_entry.py  major_exceptions_loader.py  reqs_loader.py  scraper.py  server.py
