[project]
name = "schedule-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "chromadb>=1.4.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "email-validator==2.3.0",
    "fastapi==0.128.0",
    "fastapi-cli==0.0.20",
    "fastapi-cloud-cli==0.8.0",
    "fastar==0.8.0",
    "firecrawl-py>=4.14.0",
    "google-auth==2.47.0",
    "google-genai==1.57.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "jinja2==3.1.6",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mcp==1.25.0",
    "mdurl==0.1.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "pywin32==311",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "rich-toolkit==0.17.1",
    "rignore==0.7.6",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "sentence-transformers>=5.2.2",
    "sentry-sdk==2.49.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "soupsieve==2.8.1",
    "sse-starlette==3.1.2",
    "starlette==0.50.0",
    "tenacity==9.1.2",
    "typer==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
]
